<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- DON'T TRANSLATE -->
    <string name="app_name">Ski Map</string>
    <string name="market_uri">market://details?id=net.skimap</string>
    <string name="map_api_key_debug">0ED6_e2Y9kSFAVxC_CN1Jdme6afF_pvPQhIlrHA</string>
    <string name="map_api_key_release">0ED6_e2Y9kSF-CBNSeZQCjS5p2JssXa_u7zdLLQ</string>
    <string name="settings_key_last_synchro">net_skimap_last_synchro</string>
    <string name="settings_key_current_version">net_skimap_current_version</string>
    <string name="settings_key_clear_cache">net_skimap_clear_cache</string>
    <string name="settings_key_help">net_skimap_help</string>
    <string name="settings_key_rate">net_skimap_rate</string>
    <string name="settings_key_feedback">net_skimap_feedback</string>
    <string name="settings_key_trail">net_skimap_trail</string>
    
    <!-- LANGUAGE DEPENDENT -->
    <string name="ab_button_list">List</string>
    <string name="ab_button_map">Map</string>
    <string name="ab_button_search">Search</string>
    <string name="ab_button_refresh">Refresh</string>
    <string name="ab_button_preferences">Preferences</string>
    <string name="ab_button_layers">Map layers</string>
    <string name="ab_button_layers_normal">Normal</string>
    <string name="ab_button_layers_satellite">Satellite</string>
    <string name="ab_button_location">Map location</string>
    <string name="ab_button_location_current">My location</string>
    <string name="ab_button_location_last">Current ski resort</string>
    <string name="ab_button_location_nearest">Nearest ski resort</string>
    <string name="ab_button_sort">Sort by</string>
    <string name="ab_button_sort_alphabet">Alphabet</string>
    <string name="ab_button_sort_country">Country</string>
    <string name="ab_button_sort_distance">Distance</string>
    <string name="ab_button_sort_snow">Snow quantity</string>
    <string name="ab_button_share">Share</string>
    <string name="ab_button_favourite">Favourite</string>
    <string name="ab_button_navigation">Navigation</string>
    
    <string name="ab_tab_all">All</string>
    <string name="ab_tab_favourites">Favourites</string>
    <string name="ab_tab_recommended">Recommended</string>
    
    <string name="search_location">Search location</string>
    <string name="search_skicentre">Search ski resort</string>
    <string name="search_result">Search result</string>
    <string name="search_result_skicentre_1">resort</string>
    <string name="search_result_skicentre_234">resorts</string>
    <string name="search_result_skicentre_5">resorts</string>
    <string name="search_result_cancel">Tap here for cancel search result.</string>
    <string name="search_error_not_found">not found.</string>
    <string name="search_error_connection">Connection error. Please check your internet connection.</string>
    
    <string name="settings_category_other">Other</string>
    <string name="settings_category_map">Map</string>
    <string name="settings_clear_cache">Clear cache</string>
    <string name="settings_clear_cache_summary">Remove temporary data and favourites from database</string>
    <string name="settings_clear_cache_toast">Temporary data has been cleared</string>
    <string name="settings_help">Info and help</string>
    <string name="settings_rate">Rate the application</string>
    <string name="settings_rate_summary">Support developers and rate Ski Map in Market</string>
    <string name="settings_feedback">User feedback</string>
    <string name="settings_feedback_summary">Send message to developer</string>
    <string name="settings_feedback_subject">Ski-map user feedback</string>
    <string name="settings_feedback_email">android@ski-map.net</string>
    <string name="settings_feedback_app_version">Application version:</string>
    <string name="settings_feedback_os_version">OS version: Android</string>
    <string name="settings_feedback_api">API</string>
    <string name="settings_feedback_device">Device:</string>
    <string name="settings_feedback_message">Message for developer:</string>
    <string name="settings_trail">Trail layers</string>
    <string name="settings_trail_summary">Choose type of trails to show</string>
    <string name="settings_trail_downhills">Downhills</string>
    <string name="settings_trail_lifts">Lifts</string>
    <string name="settings_trail_xc">Cross country skiing</string>
    
    <string name="layout_map_infobox">Zoom in for show ski tracks...</string>
    
    <string name="layout_listing_item_snow">cm of snow</string>
    <string name="layout_listing_empty">No favourites. Favourite resort can be added in detail using star button.</string>
    
    <string name="layout_detail_offline">You are in offline mode. Data may not be updated.</string>
    <string name="layout_detail_share">Share ski resort</string>
    <string name="layout_detail_share_skicentre">Ski resort</string>
    <string name="layout_detail_share_url">Ski-map.net</string>
    <string name="layout_detail_share_url_full">http://ski-map.net</string>
    <string name="layout_detail_skiing_title">Skiing info</string>
    <string name="layout_detail_weather_title">Weather info</string>
    <string name="layout_detail_webcam_title">Camera</string>
    <string name="layout_detail_prices_title">Prices</string>
    <string name="layout_detail_images_title">Image links</string>
    <string name="layout_detail_links_title">Web links</string>
    
    <!-- STRINGS IN HTML FORMAT -->
    <string name="layout_detail_skicentre_country"><![CDATA[<b>Country:</b>]]></string>
    <string name="layout_detail_skicentre_season"><![CDATA[<b>Season:</b>]]></string>
    <string name="layout_detail_skicentre_altitude"><![CDATA[<b>Altitude:</b>]]></string>
    <string name="layout_detail_skicentre_perex_more"><![CDATA[<u>more</u>]]></string>
    <string name="layout_detail_skicentre_perex_less"><![CDATA[<u>less</u>]]></string>
    <string name="layout_detail_skiing_snow_quantity"><![CDATA[<b>Snow quantity:</b>]]></string>
    <string name="layout_detail_skiing_lifts_count"><![CDATA[<b>Lifts opened:</b>]]></string>
    <string name="layout_detail_skiing_downhills_count"><![CDATA[<b>Downhills opened:</b>]]></string>
    <string name="layout_detail_skiing_downhills_length"><![CDATA[<b>Downhills length:</b>]]></string>
    <string name="layout_detail_skiing_crosscountry_length"><![CDATA[<b>Crosscountry length:</b>]]></string>
    <string name="layout_detail_price_adults_1"><![CDATA[<b>Adults 1 day:</b>]]></string>
    <string name="layout_detail_price_adults_6"><![CDATA[<b>Adults 6 days:</b>]]></string>
    <string name="layout_detail_price_children_1"><![CDATA[<b>Children 1 day:</b>]]></string>
    <string name="layout_detail_price_children_6"><![CDATA[<b>Children 6 days:</b>]]></string>
    <string name="layout_detail_price_young_1"><![CDATA[<b>Young 1 day:</b>]]></string>
    <string name="layout_detail_price_young_6"><![CDATA[<b>Young 6 days:</b>]]></string>
    <string name="layout_detail_price_seniors_1"><![CDATA[<b>Seniors 1 day:</b>]]></string>
    <string name="layout_detail_price_seniors_6"><![CDATA[<b>Seniors 6 days:</b>]]></string>
    
    <string name="layout_help_about_title">Ski Map</string>
    <string name="layout_help_about_text_pre"><![CDATA[Ski Map version]]></string>
    <string name="layout_help_about_text"><![CDATA[
       	<br>
       	&copy; 2011 <a href="http://liska-webdesign.cz/">Liška webdesign</a><br>
       	Developed by Petr Nohejl, <a href="http://jestrab.net/">www.jestrab.net</a><br>
       	All rights reserved.<br><br>
       	Do you like Ski Map app? Make developers happy and <a href="market://details?id=net.skimap">rate the application in Market</a>. You can also try web version of the application on <a href="http://ski-map.net/">www.ski-map.net</a>.<br><br>
       	If you have some troubles or ideas how to improve the application, contact developer on <a href="mailto:android@ski-map.net">android@ski-map.net</a>.
    ]]></string>
    <string name="layout_help_info_title">About app</string>
    <string name="layout_help_info_text"><![CDATA[
       	Ski Map brings you unique ski guide with overview of ski resorts, snow reports, weather forecast, skipass prices, web cameras and other useful functions. Check the real map of ski slopes and lifts of all significant skicentres in central Europe including Alps. You can also view cross-country trails. Ski Map support offline mode. We try to improve the application continuously and we prepared user feedback and wishes for further application development. Comming soon:<br><br>
		● sorting<br>
		● accommodation
    ]]></string>
    <string name="layout_help_changes_title">Changelog</string>
    <string name="layout_help_changes_text"><![CDATA[
       	Not available in English.
    ]]></string>
    
    <string name="dialog_intro_title">Welcome</string>
    <string name="dialog_intro_ok">Ok</string>
    <string name="dialog_intro_rate">Rate</string>
    <string name="dialog_intro_text"><![CDATA[
		Welcome to Ski Map. Please note that application is new and some functions are not implemented yet.<br><br>
		Comming soon:<br>
		● sorting<br>
		● accommodation<br><br>
		Enjoy!
    ]]></string>
    
    <string name="toast_help_opened">Ski resort opened</string>
    <string name="toast_help_closed">Ski resort closed</string>
    <string name="toast_help_nightski">Night skiing</string>
    <string name="toast_help_valley">Desc to valley</string>
    <string name="toast_help_snowpark">Snowpark</string>
    <string name="toast_help_halfpipe">Halfpipe</string>
    
    <string name="toast_help_url_img_map">Skicentre map image</string>
    <string name="toast_help_url_img_meteogram">Meteogram</string>
    <string name="toast_help_url_img_webcam">Webcamera image</string>
    <string name="toast_help_url_skimap">Ski-map web page</string>
    <string name="toast_help_url_homepage">Skicentre homepage</string>
    <string name="toast_help_url_snow_report">Snow report page</string>
    <string name="toast_help_url_weather_report">Weather report page</string>
    <string name="toast_help_url_webcams">Webcams page</string>
    
    <string name="toast_synchro_offline">You are offline. Please check your internet connection.</string>
    <string name="toast_synchro_canceled">Updating data was canceled.</string>  
    <string name="toast_synchro_error">Error! Some data cannot be synchronized. Please update application or contact developer.</string>
    
    <string name="toast_location_nearest">Nearest ski resort is</string>
    
    <string name="day_sun">Sun</string>
    <string name="day_mon">Mon</string>
    <string name="day_tue">Tue</string>
    <string name="day_wed">Wed</string>
    <string name="day_thu">Thu</string>
    <string name="day_fri">Fri</string>
    <string name="day_sat">Sat</string>
    
    <string name="unit_m">m</string>
    <string name="unit_cm">cm</string>
    <string name="unit_km">km</string>
    <string name="unit_celsius">°C</string>
</resources>
