<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbarThumbVertical="@drawable/scrollbar_background"
    android:scrollbarSize="@dimen/scrollbar_size"
    android:scrollbarTrackHorizontal="@drawable/scrollbar_track"
    android:scrollbarTrackVertical="@drawable/scrollbar_track">
    
    <LinearLayout
        android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
        <TextView
		    android:id="@+id/layout_help_about_title"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:paddingTop="@dimen/layout_detail_padding"
		    android:paddingLeft="@dimen/layout_detail_padding"
		    android:paddingRight="@dimen/layout_detail_padding"
		    android:textSize="@dimen/layout_detail_title_textsize"
		    android:textColor="@color/layout_detail_title"
		    android:textStyle="bold"
		    android:text="@string/layout_help_about_title" />
		
        <TextView
		    android:id="@+id/layout_help_about_text"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:padding="@dimen/layout_detail_padding"
		    android:textSize="@dimen/layout_detail_text_textsize"
		    android:textColor="@color/layout_detail_text" />
        
        <include layout="@layout/widget_divider" />
        
        <TextView
		    android:id="@+id/layout_help_info_title"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:paddingTop="@dimen/layout_detail_padding"
		    android:paddingLeft="@dimen/layout_detail_padding"
		    android:paddingRight="@dimen/layout_detail_padding"
		    android:textSize="@dimen/layout_detail_title_textsize"
		    android:textColor="@color/layout_detail_title"
		    android:textStyle="bold"
		    android:text="@string/layout_help_info_title" />
		
        <TextView
		    android:id="@+id/layout_help_info_text"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:padding="@dimen/layout_detail_padding"
		    android:textSize="@dimen/layout_detail_text_textsize"
		    android:textColor="@color/layout_detail_text" />
        
        <include layout="@layout/widget_divider" />
        
        <TextView
		    android:id="@+id/layout_help_changes_title"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:paddingTop="@dimen/layout_detail_padding"
		    android:paddingLeft="@dimen/layout_detail_padding"
		    android:paddingRight="@dimen/layout_detail_padding"
		    android:textSize="@dimen/layout_detail_title_textsize"
		    android:textColor="@color/layout_detail_title"
		    android:textStyle="bold"
		    android:text="@string/layout_help_changes_title" />
		
        <TextView
		    android:id="@+id/layout_help_changes_text"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:padding="@dimen/layout_detail_padding"
		    android:textSize="@dimen/layout_detail_text_textsize"
		    android:textColor="@color/layout_detail_text" />

	</LinearLayout>
</ScrollView>
